--- a/CSS/style.css
+++ b/CSS/style.css
@@ -230,4 +230,106 @@ footer {
     display: block;
     width: 30%;
   }
+}
+@media (min-width: 1024px) {
+  .menu {
+    font-size: 1rem;
+    width: 100vh;
+  }
+  .menu ul a {
+    display: inline;
+    margin: 2%;
+  }
+  a {
+    text-decoration: none;
+    color: black;
+  }
+  .rayas {
+    display: none;
+  }
+  .menu ul a:hover {
+    background-color: grey;
+    color: goldenrod;
+    border-radius: 5%;
+    padding: 0.75rem;
+  }
+  .iconos {
+    margin: 0%;
+    width: 25%;
+  }
+  .main {
+    background-color: purple;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+  }
+  footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 2rem;
+    background-color: #B3AFAC;
+    align-items: center;
+  }
+  .sobre-quimera {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .sobre-quimera strong {
+    font-size: 1.25rem;
+    margin-bottom: 10px;
+  }
+  .sobre-quimera a {
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s;
+  }
+  .sobre-quimera a:hover {
+    color: goldenrod;
+  }
+  .logo-pie {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .logo-pie img {
+    width: 150px;
+    border-radius: 7%;
+  }
+  .nuestras-tiendas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+  .nuestras-tiendas h2 {
+    margin: 0;
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-align: center;
+  }
+  .nuestras-tiendas a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    transition: color 0.3s;
+  }
+  .nuestras-tiendas a:hover {
+    color: goldenrod;
+  }
+  .nuestras-tiendas button {
+    padding: 10px 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  .nuestras-tiendas button:hover {
+    background-color: #0056b3;
+  }
 }/*# sourceMappingURL=style.css.map */
