--- a/CSS/style.css
+++ b/CSS/style.css
@@ -260,6 +260,9 @@ footer {
   .main {
     background-color: purple;
   }
+  .Producto {
+    background-color: white;
+  }
   .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
