--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -270,6 +270,9 @@ footer {
     background-color: purple;
 
   }
+  .Producto{
+    background-color: white;
+  }
 
   .container{
     display: grid;
