--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -175,7 +174,7 @@ footer {
   padding: 2%;
   border: none;
   background-color: #007bff;
-  color: #fff;
+  color: white;
   cursor: pointer;
   border-radius: 5%;
   transition: background-color 0.3s;
@@ -213,7 +212,7 @@ footer {
   }
   .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columnas de igual tamaño */
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
   footer {
@@ -328,7 +327,7 @@ footer {
     border: none;
     background-color: #007bff;
     color: white;
-    border-radius: 5px;
+    border-radius: 5%;
     cursor: pointer;
     transition: background-color 0.3s;
   }
